unpackaged/main/default/objects/Subscription_Fees__c/Subscription_Fees__c.object-meta.xml
<CustomObject>
    <description>For New Proximis Products - Saurabh 29/03/2022</description>
    <label>Subscription Fees</label>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>Subscription Fees Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>