unpackaged/main/default/objects/Subscription_Fees__c/fields/AddOn_Updated__c.field-meta.xml
<CustomField>
    <fullName>AddOn_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AddOn Updated</label>
    <type>Checkbox</type>
</CustomField>