unpackaged/main/default/objects/Subscription_Fees__c/fields/Click_Collect__c.field-meta.xml
<CustomField>
    <fullName>Click_Collect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Click &amp; Collect</label>
    <type>Checkbox</type>
</CustomField>