unpackaged/main/default/objects/Subscription_Fees__c/fields/Digital_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Digital_Commerce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Commerce</label>
    <type>Checkbox</type>
</CustomField>