unpackaged/main/default/objects/Subscription_Fees__c/fields/GMV_Predicted_Value__c.field-meta.xml
<CustomField>
    <fullName>GMV_Predicted_Value__c</fullName>
    <label>GMV Predicted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>