unpackaged/main/default/objects/Subscription_Fees__c/fields/Num_Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>Num_Add_Ons__c</fullName>
    <label>Num Add Ons</label>
    <summaryForeignKey>Add_On__c.Subscription_Fees__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>