unpackaged/main/default/objects/Subscription_Fees__c/fields/Number_Of_Associates__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Associates__c</fullName>
    <label>Number Of Associates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>