unpackaged/main/default/objects/Subscription_Fees__c/fields/OMS__c.field-meta.xml
<CustomField>
    <fullName>OMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OMS</label>
    <type>Checkbox</type>
</CustomField>