unpackaged/main/default/objects/Subscription_Fees__c/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Gateway</label>
    <type>Checkbox</type>
</CustomField>