unpackaged/main/default/objects/Subscription_Fees__c/fields/PCI_Proxy__c.field-meta.xml
<CustomField>
    <fullName>PCI_Proxy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCI Proxy</label>
    <type>Checkbox</type>
</CustomField>