unpackaged/main/default/objects/Subscription_Fees__c/fields/Predicted_GMV__c.field-meta.xml
<CustomField>
    <fullName>Predicted_GMV__c</fullName>
    <label>User - Predicted GMV Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>