unpackaged/main/default/objects/Subscription_Fees__c/fields/Predicted_GMV_Value__c.field-meta.xml
<CustomField>
    <fullName>Predicted_GMV_Value__c</fullName>
    <label>Predicted GMV Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>