unpackaged/main/default/objects/Subscription_Fees__c/fields/Smart_POS__c.field-meta.xml
<CustomField>
    <fullName>Smart_POS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smart POS</label>
    <type>Checkbox</type>
</CustomField>