unpackaged/main/default/objects/Subscription_Fees__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <label>Subscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C&amp;C Standalone</fullName>
            </value>
            <value>
                <fullName>SPOS Standalone</fullName>
            </value>
            <value>
                <fullName>C&amp;C + OMS</fullName>
            </value>
            <value>
                <fullName>SPOS + OMS</fullName>
            </value>
            <value>
                <fullName>SPOS + C&amp;C</fullName>
            </value>
            <value>
                <fullName>SPOS + C&amp;C + OMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>