unpackaged/main/default/objects/Subscription_Fees__c/fields/Support_Level_Price__c.field-meta.xml
<CustomField>
    <fullName>Support_Level_Price__c</fullName>
    <label>Support Level Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>