unpackaged/main/default/objects/Subscription_Fees__c/validationRules/Number_Of_Add_On_Records_Limited_To_One.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_Of_Add_On_Records_Limited_To_One</fullName>
    <active>true</active>
    <description>Only one add on record per subscription fees</description>
    <errorConditionFormula>Num_Add_Ons__c &gt; 1</errorConditionFormula>
    <errorMessage>There can only be one Add On record per Subscription Fee record.</errorMessage>
</ValidationRule>