unpackaged/main/default/objects/Subscription_Fees__c/validationRules/Predicted_GMV_Value_greater_than_175M.validationRule-meta.xml
<ValidationRule>
    <fullName>Predicted_GMV_Value_greater_than_175M</fullName>
    <active>true</active>
    <description>Enter Predicted GMV Price if Predicted GMV value &gt; 175 Million</description>
    <errorConditionFormula>AND( Predicted_GMV_Value__c &gt; 175000000, ISBLANK(  Predicted_GMV__c ))


/* OR(
AND( Predicted_GMV_Value__c &lt; 175000000, NOT(ISBLANK(  Predicted_GMV__c ))),
AND( Predicted_GMV_Value__c &gt; 175000000, ISBLANK( Predicted_GMV__c ))
) */</errorConditionFormula>
    <errorMessage>If Predicted GMV Value is greater than 175 Million, enter Predicted GMV Price.</errorMessage>
</ValidationRule>